fixed margin spacing thing on nav

--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -4,9 +4,6 @@ body {
     background-color: #eceff1;
 }
 
-.nav-file {
-    margin-top: -5%;
-}
 
 /*      
         **Do all the media queries here**
