--- a/payAndTransfer/css/navs-styles.css
+++ b/payAndTransfer/css/navs-styles.css
@@ -1,6 +1,13 @@
 /* all navs */
+#nav-file {
+    margin-bottom: 0%;
+}
+
 .navs-container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
 }
 
 .all-navs {
@@ -35,7 +42,4 @@
     box-shadow: none;
     background: white;
     margin-left: 2%;
- 
-   
-    
 }
